Shift output pooling program into binaries module

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -41,6 +41,13 @@
                   </jvmSettings>
               </program>
 
+            <program>
+                  <mainClass>com.bbn.kbp.events2014.bin.PoolSystemOutput</mainClass>
+                  <name>poolSystemOutput</name>
+                  <jvmSettings>
+                      <maxMemorySize>1g</maxMemorySize>
+                  </jvmSettings>
+              </program>
 
 
             </programs>
