Initial commit of validation program

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -49,6 +49,15 @@
                   </jvmSettings>
               </program>
 
+            <program>
+                  <mainClass>com.bbn.kbp.events2014.bin.ValidateSystemOutput</mainClass>
+                  <name>validateSystemOutput</name>
+                  <jvmSettings>
+                      <maxMemorySize>1g</maxMemorySize>
+                  </jvmSettings>
+              </program>
+
+
 
             </programs>
       </configuration>
