--- a/kbp-events2014/pom.xml
+++ b/kbp-events2014/pom.xml
@@ -43,7 +43,12 @@
 	<groupId>org.slf4j</groupId>
 	<artifactId>slf4j-api</artifactId>
 </dependency>
-
+<dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>2.3.1</version>
+</dependency>
+            
   </dependencies>
 
 
