Filter to deduplicate system outputs by keeping only highest scoring justification for each (docid, type, role, CAS, realis) tuples
Also:
* shifts TypeRoleFillerRealis, EntityNormalizer from scoring code to core
* adds toString, equals, hashCode to SystemOutput

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -79,6 +79,13 @@
                   </jvmSettings>
               </program>
 
+<program>
+                  <mainClass>com.bbn.kbp.events2014.bin.KeepOnlyBestResponses</mainClass>
+                  <name>keepOnlyBestResponses</name>
+                  <jvmSettings>
+                      <maxMemorySize>1g</maxMemorySize>
+                  </jvmSettings>
+              </program>
 
 
 
