Score aggregator/tabulator for the score tracking sequence

--- a/kbp-events2014-scorer/pom.xml
+++ b/kbp-events2014-scorer/pom.xml
@@ -18,6 +18,25 @@
 
   <build>
       <plugins>
+                <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>appassembler-maven-plugin</artifactId>
+        <version>${appassembler.maven.plugin.version}</version>
+        <configuration>
+            <programs>
+              <program>
+                  <mainClass>com.bbn.kbp.events2014.scorer.bin.KBPScoreTabulator</mainClass>
+                  <name>KBPScoreTabulator</name>
+                  <jvmSettings>
+                      <maxMemorySize>2G</maxMemorySize>
+                      <!-- <extraArguments>
+                          <extraArgument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=1044</extraArgument>
+                      </extraArguments> -->
+                  </jvmSettings>
+              </program>
+              </programs>
+              </configuration>
+              </plugin>
   </plugins>
   </build>
   <dependencies>
