--- a/kbp-events2014-scorer/pom.xml
+++ b/kbp-events2014-scorer/pom.xml
@@ -72,6 +72,14 @@
 	<artifactId>slf4j-api</artifactId>
 </dependency>
 
+ 
+ <dependency>
+ <groupId>commons-lang</groupId>
+ <artifactId>commons-lang</artifactId>
+ <version>2.3</version>
+</dependency>
+ 
+
   </dependencies>
 
 
