Allow expanding an annotation store based on realis assessment.
An annotation store can be expanded in the following way: for each assessed response with
an incorrect realis, make a copy of it with the same assessment, but with the realis in
the original response replaced with the assessed realis. This program does that.

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -95,7 +95,13 @@
                   </jvmSettings>
               </program>
 
-
+                <program>
+                    <mainClass>com.bbn.kbp.events2014.expanders.ExpandFromRealis</mainClass>
+                    <name>expandByRealis</name>
+                    <jvmSettings>
+                        <maxMemorySize>1g</maxMemorySize>
+                    </jvmSettings>
+                </program>
 
 
             </programs>
