Add option to ignore realis during scoring

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -96,7 +96,7 @@
               </program>
 
                 <program>
-                    <mainClass>com.bbn.kbp.events2014.expanders.ExpandFromRealis</mainClass>
+                    <mainClass>com.bbn.kbp.events2014.transformers.ExpandFromRealis</mainClass>
                     <name>expandByRealis</name>
                     <jvmSettings>
                         <maxMemorySize>1g</maxMemorySize>
