--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -34,6 +34,15 @@
               </program>
 
                 <program>
+                    <mainClass>com.bbn.kbp.events2014.transformers.MergeAssessmentStores</mainClass>
+                    <name>mergeAssessmentStores</name>
+                    <jvmSettings>
+                        <maxMemorySize>1g</maxMemorySize>
+                    </jvmSettings>
+                </program>
+
+
+                <program>
                   <mainClass>com.bbn.kbp.events2014.bin.ImportSystemOutputToAnnotationStore</mainClass>
                   <name>importSystemOutputToAnnotationStore</name>
                   <jvmSettings>
