--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
   <dependency>
       <groupId>com.bbn.bue</groupId>
       <artifactId>common-core-open</artifactId>
-      <version>2.3.0-SNAPSHOT</version>
+      <version>2.4.0</version>
   </dependency>
 
   <dependency>
@@ -199,7 +199,7 @@
 <dependency>
       <groupId>com.bbn.bue</groupId>
       <artifactId>common-core-jackson-serialization-open</artifactId>
-      <version>2.3.0-SNAPSHOT</version>
+      <version>2.4.0</version>
   </dependency>
 
 
