Depend on bue-common-open 2.5.0-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -1,208 +1,215 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.bbn.kbp.events2014</groupId>
-  <artifactId>kbp-events2014-all</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+    <groupId>com.bbn.kbp.events2014</groupId>
+    <artifactId>kbp-events2014-all</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-  <name>KBP 2014 Event Argument Shared Task</name>
-  <url>http://www.bbn.com/</url>
+    <name>KBP 2014 Event Argument Shared Task</name>
+    <url>http://www.bbn.com/</url>
 
-  <modules>
-      <module>kbp-events2014</module>
-      <module>kbp-events2014-scorer</module>
-      <module>kbp-events2014-bin</module>
-  </modules>
+    <modules>
+        <module>kbp-events2014</module>
+        <module>kbp-events2014-scorer</module>
+        <module>kbp-events2014-bin</module>
+    </modules>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
-    <maven.javadoc.plugin.version>2.8.1</maven.javadoc.plugin.version>
-    <maven.site.plugin.version>3.1</maven.site.plugin.version>
-    <maven.project.info.reports.plugin.version>2.4</maven.project.info.reports.plugin.version>
-    <maven.dependency.plugin.version>2.4</maven.dependency.plugin.version>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
-    <appassembler.maven.plugin.version>1.2.2</appassembler.maven.plugin.version>
-    <maven.surefire.plugin.version>2.12.2</maven.surefire.plugin.version>
-    <maven.surefire.report.plugin.version>2.12.2</maven.surefire.report.plugin.version>
-    <maven.failsafe.plugin.version>2.12.2</maven.failsafe.plugin.version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
+        <maven.javadoc.plugin.version>2.8.1</maven.javadoc.plugin.version>
+        <maven.site.plugin.version>3.1</maven.site.plugin.version>
+        <maven.project.info.reports.plugin.version>2.4</maven.project.info.reports.plugin.version>
+        <maven.dependency.plugin.version>2.4</maven.dependency.plugin.version>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+        <appassembler.maven.plugin.version>1.2.2</appassembler.maven.plugin.version>
+        <maven.surefire.plugin.version>2.12.2</maven.surefire.plugin.version>
+        <maven.surefire.report.plugin.version>2.12.2</maven.surefire.report.plugin.version>
+        <maven.failsafe.plugin.version>2.12.2</maven.failsafe.plugin.version>
 
-    <skipITs>true</skipITs>
+        <skipITs>true</skipITs>
 
-    <junit.version>4.11</junit.version>
-    <guava.version>16.0</guava.version>
-  </properties>
+        <junit.version>4.11</junit.version>
+        <guava.version>16.0</guava.version>
+    </properties>
 
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>${maven.javadoc.plugin.version}</version>
-          <configuration>
-            <show>package</show>
-            <quiet>true</quiet>
-            <linksource>true</linksource>
-            <links>
-              <link>http://docs.guava-libraries.googlecode.com/git-history/v${guava.version}/javadoc/</link>
-            </links>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>${maven.failsafe.plugin.version}</version>
-          <executions>
-            <execution>
-              <id>integration-test</id>
-              <goals>
-                <goal>integration-test</goal>
-                <goal>verify</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-report-plugin</artifactId>
-          <version>${maven.surefire.report.plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven.surefire.plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>appassembler-maven-plugin</artifactId>
-          <version>${appassembler.maven.plugin.version}</version>
-          <executions>
-            <execution>
-              <phase>package</phase>
-              <goals>
-                <goal>assemble</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven.compiler.plugin.version}</version>
-        <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-site-plugin</artifactId>
-        <version>${maven.site.plugin.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>${maven.project.info.reports.plugin.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>${maven.dependency.plugin.version}</version>
-      </plugin>
-<plugin>
-      <artifactId>maven-source-plugin</artifactId>
-      <version>2.2.1</version>
-      <executions>
-        <execution>
-          <id>attach-sources</id>
-          <phase>deploy</phase>
-          <goals><goal>jar-no-fork</goal></goals> 
-        </execution>
-      </executions>
-    </plugin>
-    <plugin> 
-      <artifactId>maven-javadoc-plugin</artifactId> 
-      <executions> 
-        <execution> 
-          <id>attach-javadocs</id>
-          <phase>deploy</phase>
-          <goals><goal>jar</goal></goals> 
-        </execution> 
-      </executions> 
-    </plugin>
-    <plugin> 
-      <!-- explicitly define maven-deploy-plugin after other to force exec order -->
-      <artifactId>maven-deploy-plugin</artifactId> 
-      <version>2.7</version>
-      <executions> 
-        <execution> 
-          <id>deploy</id>
-          <phase>deploy</phase>
-          <goals><goal>deploy</goal></goals> 
-        </execution> 
-      </executions> 
-    </plugin>
-    </plugins>
-  </build>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>${maven.javadoc.plugin.version}</version>
+                    <configuration>
+                        <show>package</show>
+                        <quiet>true</quiet>
+                        <linksource>true</linksource>
+                        <links>
+                            <link>http://docs.guava-libraries.googlecode.com/git-history/v${guava.version}/javadoc/
+                            </link>
+                        </links>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>${maven.failsafe.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>integration-test</id>
+                            <goals>
+                                <goal>integration-test</goal>
+                                <goal>verify</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-report-plugin</artifactId>
+                    <version>${maven.surefire.report.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>appassembler-maven-plugin</artifactId>
+                    <version>${appassembler.maven.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>assemble</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin.version}</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>${maven.site.plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>${maven.project.info.reports.plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>${maven.dependency.plugin.version}</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <!-- explicitly define maven-deploy-plugin after other to force exec order -->
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <id>deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${maven.javadoc.plugin.version}</version>
-        <configuration>
-          <show>package</show>
-          <quiet>true</quiet>
-          <linksource>true</linksource>
-          <links>
-            <link>http://docs.guava-libraries.googlecode.com/git-history/v${guava.version}/javadoc/</link>
-          </links>
-        </configuration>
-      </plugin>
-    </plugins>
-  </reporting>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven.javadoc.plugin.version}</version>
+                <configuration>
+                    <show>package</show>
+                    <quiet>true</quiet>
+                    <linksource>true</linksource>
+                    <links>
+                        <link>http://docs.guava-libraries.googlecode.com/git-history/v${guava.version}/javadoc/</link>
+                    </links>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
-  <dependencyManagement>
-    <dependencies>
-  <dependency>
-      <groupId>com.bbn.bue</groupId>
-      <artifactId>common-core-open</artifactId>
-      <version>2.4.0</version>
-  </dependency>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.bbn.bue</groupId>
+                <artifactId>common-core-open</artifactId>
+                <version>2.5.0-SNAPSHOT</version>
+            </dependency>
 
-  <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
 
- <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>${guava.version}</version>
-    </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
 
-	<dependency>
-	<groupId>org.slf4j</groupId>
-	<artifactId>slf4j-api</artifactId>
-	<version>1.7.5</version>
-</dependency>
-<dependency>
-      <groupId>com.bbn.bue</groupId>
-      <artifactId>common-core-jackson-serialization-open</artifactId>
-      <version>2.4.0</version>
-  </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.5</version>
+            </dependency>
+            <dependency>
+                <groupId>com.bbn.bue</groupId>
+                <artifactId>common-core-jackson-serialization-open</artifactId>
+                <version>2.5.0-SNAPSHOT</version>
+            </dependency>
 
 
-</dependencies>
-  </dependencyManagement>
+        </dependencies>
+    </dependencyManagement>
 </project>
