kbp code to keep only assessed tuples

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -112,6 +112,13 @@
                     </jvmSettings>
                 </program>
 
+		<program>
+			<mainClass>com.bbn.kbp.events2014.bin.KeepAnnotatedTuples</mainClass>
+			<name>keepAnnotatedTuples</name>
+                    	<jvmSettings>
+                        	<maxMemorySize>1g</maxMemorySize>
+                    	</jvmSettings>
+		</program>
 
             </programs>
       </configuration>
