--- a/kbp-events2014/pom.xml
+++ b/kbp-events2014/pom.xml
@@ -43,6 +43,19 @@
 	<groupId>org.slf4j</groupId>
 	<artifactId>slf4j-api</artifactId>
 </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+      </dependency>
+
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+          <version>1.1.2</version>
+          <scope>test</scope>
+      </dependency>
+
 <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
