--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -3,14 +3,14 @@
   <parent>
       <artifactId>kbp-events2014-all</artifactId>
       <groupId>com.bbn.kbp.events2014</groupId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
       <relativePath>../pom.xml</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>kbp-events2014-bin</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>2014 KBP Event Arguments Task Binaries</name>
@@ -131,13 +131,13 @@
 <dependency>
       <groupId>com.bbn.kbp.events2014</groupId>
       <artifactId>kbp-events2014</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
   </dependency>
 
 <dependency>
       <groupId>com.bbn.kbp.events2014</groupId>
       <artifactId>kbp-events2014-scorer</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
   </dependency>
 
 
