--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.bbn.kbp.events2014</groupId>
     <artifactId>kbp-events2014-all</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>KBP 2014 Event Argument Shared Task</name>
