Adding code which reads in LinkingStore and converts to (and write out) EquivalenceStore. A LinkingStore: each document contains sets of Response uniqueId on each line. An EquivalenceStore is similar, but the IDs are TypeRoleFillerRealise hash IDs.

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -128,6 +128,14 @@
 			</jvmSettings>	
 		</program>
 
+		<program>
+			<mainClass>com.bbn.kbp.events2014.bin.ConvertToAndWriteEquivalenceClass</mainClass>
+			<name>convertToAndWriteEquivalenceClass</name>
+			<jvmSettings>
+				<maxMemorySize>1g</maxMemorySize>
+			</jvmSettings>
+		</program>
+
             </programs>
       </configuration>
   </plugin>
