--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <skipITs>true</skipITs>
 
         <junit.version>4.11</junit.version>
-        <guava.version>16.0</guava.version>
+        <guava.version>17.0</guava.version>
 
         <!-- Sonar server properties. These only work BBN-internally -->
       <sonar.host.url>http://e-apache-2.bbn.com:9000</sonar.host.url>
@@ -186,7 +186,7 @@
             <dependency>
                 <groupId>com.bbn.bue</groupId>
                 <artifactId>common-core-open</artifactId>
-                <version>2.11.0-SNAPSHOT</version>
+                <version>2.12.0</version>
             </dependency>
 
             <dependency>
@@ -210,7 +210,7 @@
             <dependency>
                 <groupId>com.bbn.bue</groupId>
                 <artifactId>common-core-jackson-serialization-open</artifactId>
-                <version>2.9.0-SNAPSHOT</version>
+                <version>2.12.0</version>
             </dependency>
 
 
