--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -203,6 +203,12 @@
   <version>2.4.4</version>
 </dependency>
 
+      <dependency>
+          <groupId>com.bbn.nlp</groupId>
+          <artifactId>nlp-core</artifactId>
+          <version>1.9.0-SNAPSHOT</version>
+      </dependency>
+
   </dependencies>
 
 
