Add internal SCM URL to root POM

--- a/pom.xml
+++ b/pom.xml
@@ -220,4 +220,10 @@
 
         </dependencies>
     </dependencyManagement>
+
+
+    <scm>
+        <developerConnection>scm:git:ssh://d225/d4m/ears/git/kbp-2014-event-arguments.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 </project>
