--- a/kbp-events2014/pom.xml
+++ b/kbp-events2014/pom.xml
@@ -2,14 +2,14 @@
     <parent>
         <artifactId>kbp-events2014-all</artifactId>
         <groupId>com.bbn.kbp.events2014</groupId>
-        <version>2.0.3</version>
+        <version>2.0.4-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kbp-events2014</artifactId>
-    <version>2.0.3</version>
+    <version>2.0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Core code for KBP 2014 Event Arguments Task</name>
