some experimental code to generate clusterings based on sameEventType and then dump to format that could be read and scored by com.bbn.kbp.linking.bin.EALExamples

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -166,6 +166,11 @@
                             </jvmSettings>
                         </program>
 
+			<program>
+			    <mainClass>com.bbn.kbp.events2014.bin.ExploreEALScorer</mainClass>
+			    <name>exploreEalScorer</name>
+			</program>
+
                     </programs>
                 </configuration>
             </plugin>
