--- a/kbp-events2014/pom.xml
+++ b/kbp-events2014/pom.xml
@@ -22,6 +22,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>com.bbn.nlp</groupId>
+            <artifactId>nlp-core-open</artifactId>
+            <version>2.17.4</version>
+        </dependency>
 
         <dependency>
             <groupId>com.bbn.bue</groupId>
