--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -25,7 +25,7 @@
                 <configuration>
                     <programs>
                         <program>
-                            <mainClass>com.bbn.kbp.events2014.scorer.bin.KBPScorerBin</mainClass>
+                            <mainClass>com.bbn.kbp.events2014.scorer.bin.KBP2014ScorerBin</mainClass>
                             <name>kbpScorer</name>
                             <jvmSettings>
                                 <maxMemorySize>4G</maxMemorySize>
