Make the logging dependency optional for kbp-events2014-bin

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -213,6 +213,7 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.0.13</version>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
