--- a/pom.xml
+++ b/pom.xml
@@ -187,7 +187,7 @@
             <dependency>
                 <groupId>com.bbn.bue</groupId>
                 <artifactId>common-core-open</artifactId>
-                <version>2.17.4</version>
+                <version>2.17.5-SNAPSHOT</version>
             </dependency>
 
             <dependency>
