--- a/kbp-events2014-scorer/pom.xml
+++ b/kbp-events2014-scorer/pom.xml
@@ -42,6 +42,27 @@
                     </programs>
                 </configuration>
             </plugin>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>exec-maven-plugin</artifactId>
+              <version>1.3.2</version>
+              <executions>
+                <execution>
+                  <id>script-chmod</id>
+                  <phase>install</phase>
+                  <goals>
+                    <goal>exec</goal>
+                  </goals>
+                  <configuration>
+                    <executable>bash</executable>
+                    <arguments>
+                      <argument>-c</argument>
+                      <argument>chmod a+x ${project.build.directory}/appassembler/bin/*</argument>
+                    </arguments>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
