add functionality to change doc ids to match their filenames

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -38,6 +38,11 @@
                         </program>
 
                         <program>
+                            <mainClass>com.bbn.kbp.events2014.bin.ChangeDocIDToMatchFile</mainClass>
+                            <name>changeDocIDToMatchFile</name>
+                        </program>
+
+                        <program>
                             <mainClass>com.bbn.kbp.events2014.transformers.MergeAssessmentStores
                             </mainClass>
                             <name>mergeAssessmentStores</name>
