Program to split up annotation stores which contain multiple parallel annotations on the same files.

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -43,6 +43,12 @@
                         </program>
 
                         <program>
+                            <mainClass>com.bbn.kbp.events2014.bin.SplitAnnStoreBySuffixes
+                            </mainClass>
+                            <name>splitAnnStoreBySuffixes</name>
+                        </program>
+
+                        <program>
                             <mainClass>com.bbn.kbp.events2014.transformers.MergeAssessmentStores
                             </mainClass>
                             <name>mergeAssessmentStores</name>
@@ -197,7 +203,7 @@
                   </configuration>
                 </execution>
               </executions>
-            </plugin>             
+            </plugin>
         </plugins>
     </build>
     <dependencies>
