--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -189,7 +189,7 @@
                     </programs>
                 </configuration>
             </plugin>
-            <plugin>
+            <!--<plugin>
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>exec-maven-plugin</artifactId>
               <version>1.3.2</version>
@@ -209,7 +209,7 @@
                   </configuration>
                 </execution>
               </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
     <dependencies>
