--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -233,6 +233,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.bbn.bue</groupId>
+            <artifactId>common-core</artifactId>
+            <version>2.15.6-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <!-- <scope>test</scope> -->
