--- a/pom.xml
+++ b/pom.xml
@@ -187,7 +187,7 @@
             <dependency>
                 <groupId>com.bbn.bue</groupId>
                 <artifactId>common-core-open</artifactId>
-                <version>2.17.10-SNAPSHOT</version>
+                <version>2.17.12-SNAPSHOT</version>
             </dependency>
 
             <dependency>
@@ -211,7 +211,12 @@
             <dependency>
                 <groupId>com.bbn.bue</groupId>
                 <artifactId>common-core-jackson-serialization-open</artifactId>
-                <version>2.17.10-SNAPSHOT</version>
+                <version>2.17.12-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.bbn.bue</groupId>
+                <artifactId>common-core</artifactId>
+                <version>2.15.6-SNAPSHOT</version>
             </dependency>
 
 
