--- a/kbp-events2014/pom.xml
+++ b/kbp-events2014/pom.xml
@@ -57,7 +57,7 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.2</version>
-            <scope>test</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
