Update common-core-open dependency for MathUtils.medianOfIntegers

--- a/kbp-events2014-bin/pom.xml
+++ b/kbp-events2014-bin/pom.xml
@@ -233,6 +233,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.bbn.nlp</groupId>
+            <artifactId>nlp-core-open</artifactId>
+        </dependency>
+
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <!-- <scope>test</scope> -->
