--- a/pom.xml
+++ b/pom.xml
@@ -187,8 +187,15 @@
             <dependency>
                 <groupId>com.bbn.bue</groupId>
                 <artifactId>common-core-open</artifactId>
-                <version>2.17.12</version>
+                <version>2.18.1</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.bbn.nlp</groupId>
+                <artifactId>nlp-core-open</artifactId>
+                <version>2.18.1</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>junit</groupId>
@@ -211,7 +218,7 @@
             <dependency>
                 <groupId>com.bbn.bue</groupId>
                 <artifactId>common-core-jackson-serialization-open</artifactId>
-                <version>2.17.12</version>
+                <version>2.18.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
