--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
             <dependency>
                 <groupId>com.bbn.bue</groupId>
                 <artifactId>common-core-open</artifactId>
-                <version>2.18.1</version>
+                <version>2.18.2-SNAPSHOT</version>
             </dependency>
 
             <dependency>
