--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <skipITs>true</skipITs>
 
         <junit.version>4.11</junit.version>
+	<bueopen.version>2.18.4</bueopen.version>
 
         <!-- Sonar server properties. These only work BBN-internally -->
         <sonar.host.url>http://e-apache-2.bbn.com:9000</sonar.host.url>
@@ -190,13 +191,13 @@
             <dependency>
                 <groupId>com.bbn.bue</groupId>
                 <artifactId>common-core-open</artifactId>
-                <version>2.18.4</version>
+                <version>${bueopen.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.bbn.nlp</groupId>
                 <artifactId>nlp-core-open</artifactId>
-                <version>2.18.4</version>
+                <version>${bueopen.version}</version>
             </dependency>
 
 
@@ -221,7 +222,7 @@
             <dependency>
                 <groupId>com.bbn.bue</groupId>
                 <artifactId>common-core-jackson-serialization-open</artifactId>
-                <version>2.18.0</version>
+                <version>${bueopen.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
